--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  background: linear-gradient(#e66465, #9198e5);
+}
+
+header {
+  color: white;
+  font-size: 2rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+form > button {
+  height: 50px;
+  width: 50px;
+  border: none;
+  background-color: #9198e5;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo-input {
+  width: 500px;
+  height: 50px;
+  border: none;
+}
+
+.container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  margin-top: 20px;
+}
+
+.container .todo {
   color: white;
+  font-size: 1.5rem;
+  margin-top: 5px;
+  transition: all .5s;
 }
 
-.App-link {
-  color: #61dafb;
+.todo:hover {
+  transform: scale(1.1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo-item {
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.delete-btn {
+  border: none;
+  height: 40px;
+  width: 40px;
+  background-color: rgb(240, 49, 49);
+}
+
+.complete-btn {
+  border: none;
+  height: 40px;
+  width: 40px;
+  background-color: rgb(33, 107, 33);
 }
